Fix: Clean up CI workflow and resolve PMD code style violations